force-app/main/default/objects/Humidity_Readings__c/Humidity_Readings__c.object-meta.xml
<CustomObject>
    <description>Humidity Readings</description>
    <label>Humidity Readings</label>
    <nameField>
        <displayFormat>HRN-{0000000}</displayFormat>
        <label>Humidity Readings Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Humidity Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>