force-app/main/default/objects/Humidity_Readings__c/fields/Dehu_Chamber_1_F__c.field-meta.xml
<CustomField>
    <fullName>Dehu_Chamber_1_F__c</fullName>
    <label>Dehu - Chamber 1 - °F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>