force-app/main/default/objects/Humidity_Readings__c/fields/Dehu_Chamber_2_RH__c.field-meta.xml
<CustomField>
    <fullName>Dehu_Chamber_2_RH__c</fullName>
    <label>Dehu - Chamber 2 - RH%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>