force-app/main/default/objects/Humidity_Readings__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Humidity Readings</relationshipLabel>
    <relationshipName>Humidity_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>