force-app/main/default/objects/Humidity_Readings__c/fields/Inspection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date_Time__c</fullName>
    <label>Inspection Date Time</label>
    <type>DateTime</type>
</CustomField>