force-app/main/default/objects/Humidity_Readings__c/fields/Outside_F__c.field-meta.xml
<CustomField>
    <fullName>Outside_F__c</fullName>
    <description>Outside F</description>
    <label>Outside °F</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>