force-app/main/default/objects/Humidity_Readings__c/fields/Outside_GPP__c.field-meta.xml
<CustomField>
    <fullName>Outside_GPP__c</fullName>
    <formula>0.782</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outside GPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>