force-app/main/default/objects/Humidity_Readings__c/fields/Outside_RH__c.field-meta.xml
<CustomField>
    <fullName>Outside_RH__c</fullName>
    <description>Outside</description>
    <label>Outside RH%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>