force-app/main/default/objects/Humidity_Readings__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <formula>Inspection__r.Account__r.Name</formula>
    <label>Property</label>
    <type>Text</type>
</CustomField>