force-app/main/default/objects/Humidity_Readings__c/fields/Unaffected_F__c.field-meta.xml
<CustomField>
    <fullName>Unaffected_F__c</fullName>
    <label>Unaffected °F</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>