force-app/main/default/objects/Humidity_Readings__c/fields/Unaffected_RH__c.field-meta.xml
<CustomField>
    <fullName>Unaffected_RH__c</fullName>
    <label>Unaffected RH%</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>